# Data-Structures-Algorithms-C-Programming-Language

./: .gitignore  CMakeLists.txt  Program1.java  Program3.java  README.md  a.out  fileio.c  hello.c  helloworld.c
Activity3C/: a.out  activity3.c  comperror.c  mymath.c  mymath.h  test
ArraysPractice/: a.out  printd_recursive.h  recursive.c
BuckyTutorial/: QuanInfo.h  char_array.c  pointers.c  test
CPractice/: CMakeLists.txt  CPractice2.c  Conditionals.c  TutorialPoint_Array.c  a.out  array_max  array_max.c  arrays_practice.c  control_structures_practice.c  declare_variables_int_and_floatingpoint_array.c  letter_count.c  objects.txt  pointers.c  printx  return_int_array_using_pointer.c  return_largest_integer_in_an_array.c  stupidfunction.c  test  triple_it.c  typedef_experiment.c
David/: RunHisShit.c  a.out
Pointers/: Pointers.c  a.out  calculate_result_as_pointer.c  swap.c  test
Practice3c/: .gitignore  func_practice3c.c  practice3c.c
Project2/: .gitignore  CMakeLists.txt  a.out  basiclist.c  basiclist.h  makefile  map.c  map.h  mapobject.c  mapobject.h  project2.c  test1.c  test_struct.c
Struct/: a.out  call_structure.c  define_struct.h
play/: a.out  wtf.c
